# HackWestern

./: .gitignore  README.md  about.md  configure-tool.sh  docker-compose.yml  package-lock.json
cli/: README.md  pyproject.toml
cli-tool/: .gitignore  docker-compose.yml  pyproject.toml
cli-tool/app/: constants.py  docker_stats.py  main.py  utils.py
cli-tool/app/scripts/: amazon_install.sh  linux_install.sh
cli-tool/scripts/: ubuntu_install.sh
cli/app/: constants.py  main.py  utils.py
cli/app/api/: ai.py  main.py  utils.py
cli/app/scripts/: amazon_install.sh  linux_install.sh  oracle_install.sh
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/metrics/: page.tsx
frontend/components/: FileUpload.tsx  FileUploadInterface.tsx  ToggleSwitch.tsx
frontend/components/Metrics/: Metrics.tsx
frontend/components/Sidebar/: appSidebar.tsx  navMain.tsx  teamLogo.tsx
frontend/components/UploadForm/: UploadForm.tsx
frontend/components/ui/: sidebar.tsx
frontend/my-app/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/my-app/app/: globals.css  layout.css  layout.tsx  page.tsx  tempolabsPage.tsx
frontend/my-app/app/tempolabs/: page.tsx
frontend/my-app/components/: CodePaste.tsx  FileUpload.tsx  FileUploadInterface.tsx  Sidebar.css  Sidebar.tsx  ToggleSwitch.tsx
frontend/my-app/components/tempolabs/: home.tsx
frontend/public/: testdata.csv
test-code/javascript/: tin-docker-compose.yml
test-code/python/: tin-docker-compose.yml
