[tool.poetry]
name = "cli-tool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]
include = ["pyproject.toml"]

[tool.poetry.scripts]
cli-tool = "app.main:app"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.14.0"
ruff = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
