[tool.poetry]
name = "tin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]
include = ["pyproject.toml"]

[tool.poetry.scripts]
tin = "app.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.14.0"
ruff = "^0.8.1"
toml = "^0.10.2"
rich = "^13.9.4"
pyyaml = "^6.0.2"
docker = "^7.1.0"
colorama = "^0.4.6"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
